# Planix

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MyNotes.html  README.en.md  README.md  eslint.config.js  index.html  manifest.json  package.json  requirements.txt  screenshot.js  sw.js  vite.config.ts
.github/workflows/: ci.yml  desktop-release.yml
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
backend/app/: api_key.py  db.py  desktop_paths.py  main.py  schemas.py
backend/tests/: conftest.py  test_ai_settings.py  test_command.py  test_critic_policy_retry.py  test_critic_quality_gate.py  (+27 more)
css/: base.css  calendar.css  nav.css  panel.css  time-picker.css
docs/: architecture.md  audit.md  cognitive-os-acceptance.md  cognitive-planning-acceptance.md  desktop.md  planning-template-inventory.md  release-v1.1.0.md  release-v1.1.1.md  release-v1.1.2.md  release-v1.1.4.md
js/: lang.js  plans.js  timepicker.js
legacy/: README.md
release/: MyNotes-AI-v1.1.1-windows-x64.sha256
scripts/: build-backend.ps1  build-release.ps1  build-web.ps1  check-desktop-config.ps1  check-desktop-toolchain.ps1  check-packaging-toolchain.ps1  dev-desktop.ps1  live_planning_e2e.py  smoke-test-installed.ps1  test-deepseek-real.ps1  verify-demo.ps1  verify-msi-user-path.ps1  wait-api-health.ps1
src/: App.tsx  styles.css  types.ts
(+204 files in other folders)
