[package]
name = "mynotes-ai-desktop"
version = "1.1.1"
description = "MyNotes AI desktop shell"
authors = ["MyNotes AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
